@@ -1,3 +1,9 @@
+= 2011/07/26	0.81
+
+Add regression tests.
+
+Add Daemon::Generic::AnyEvent
+
 = 2011/05/19	0.72
 
 Address https://rt.cpan.org/Public/Bug/Display.html?id=63704,
